[tool.poetry]
name = "poetry-taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = ["keshan <keshansharp123@outlook.com>"]
readme = "README.md"
packages = [{ include = "src" }]  # Explicitly include the src folder as a package


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "<2.2.0" 
poetry = "^1.8.4"
pyarrow = "^18.0.0"
tqdm = "^4.67.0"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
optuna = "^4.1.0"
python-dotenv = "^1.0.1"
hopsworks = {version = "^4.1.2", extras = ["python"]}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
